<resources>
    <string name="app_name">Battleship</string>

    <!-- ACTIVITY NAMES -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_single_player">SinglePlayer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_multi_player">MultiPlayer</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_settings">Settings</string>

    <!-- SETTING STRINGS -->
    <string name="setting_main">Settings</string>
    <string name="setting_sound">Sound</string>

    <!-- SINGLE PLAYER STRINGS -->
    <string name="single_main">Single Player</string>
    <string name="stats">Statistics</string>
    <string name="play">Play</string>

    <!-- MULTIPLAYER STRINGS -->
    <string name="multi_main">Multiplayer</string>
    <string name="multi_friends">Play Against Friend</string>
    <string name="multi_match">Match Making</string>

    <!-- FRIENDS LIST STRINGS -->
    <string name="friend_main">Friends</string>

    <!-- OTHER STRINGS -->
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="cont">Continue</string>
    <string name="sign_in">Login</string>
    <string name="delete_account">Delete Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
