<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top"
    tools:context=".fragments.settings.SettingsFragmentMain">

    <!-- TODO: Update Settings UI -->

    <LinearLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="@string/setting_sound"/>
        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0"
            android:layout_weight="0.92"
            android:padding="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="16sp"
            android:padding="20dp"/>
        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textSize="14sp"
            android:padding="20dp"/>
    </LinearLayout>
</LinearLayout>